--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -9,8 +9,14 @@ on:
 permissions: read-all
 
 jobs:
-  build:
+  args:
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 2
+
+  build:
     permissions:
       id-token: write # To sign.
       contents: write # To upload release assets.
@@ -24,6 +30,7 @@ jobs:
         arch:
           - amd64
           - arm64
+    needs: args
     uses: slsa-framework/slsa-github-generator/.github/workflows/builder_go_slsa3.yml@v1.9.0
     with:
       go-version: 1.21
