--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -34,3 +34,4 @@ jobs:
     uses: slsa-framework/slsa-github-generator/.github/workflows/builder_go_slsa3.yml@v1.9.0
     with:
       go-version: 1.21
+      evaluated-envs: "GOOS:${{matrix.os}}, GOARCH:${{matrix.arch}}"
