--- a/.slsa-goreleaser.yml
+++ b/.slsa-goreleaser.yml
@@ -1,6 +1,8 @@
 # Ref: https://github.com/slsa-framework/slsa-github-generator/tree/main/internal/builders/go#configuration-file
 
 version: 1
+goos: {{.Env.GOOS}}
+goarch: {{.Env.GOARCH}}
 env:
   - CGO_ENABLED=0
 flags:
