--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -1,3 +1,7 @@
+# Copyright 2023 Marc-Antoine Ruel. All rights reserved.
+# Use of this source code is governed under the Apache License, Version 2.0
+# that can be found in the LICENSE file.
+
 # Ref: https://github.com/slsa-framework/slsa-github-generator/tree/main/internal/builders/go
 
 name: SLSA Go releaser
